--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "blessed-contrib": "^4.8.19",
     "discord.js": "^11.6.2",
     "dotenv": "^8.2.0",
-    "robotjs": "^0.6.0"
+    "robotjs": "^0.6.0",
+    "minimist": ">=1.2.2"
   }
 }
